--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,46 +1,92 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100&display=swap");
-
-@media only screen and (max-width: 767px) {
-  nav {
-    background-color: #2a2a3d;
-    overflow: hidden;
-  }
-  .nav-right {
-    display: none;
-  }
-
-  .btn {
-    color: white;
-    size: 50px;
-  }
-  .btn-right {
-    float: right;
-  }
+header {
+  padding: 45px 0;
+  background-color: #222;
 }
 
-@media only screen and (min-width: 768px) {
-  .btn {
+.menu {
+  margin-top: 10px;
+  overflow: hidden;
+}
+.menu ul {
+  padding: 0;
+  margin: 0;
+  float: right;
+}
+
+.menu ul li {
+  list-style-type: none;
+
+  display: inline-block;
+
+  padding-left: 12px;
+  padding-right: 10px;
+
+  text-transform: uppercase;
+}
+.menu ul li a {
+  list-style: none;
+  text-decoration: none;
+  color: #ffffff;
+}
+.menu ul li a:hover {
+  color: #e9c62c;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+}
+@media (max-width: 767px) {
+  .menu {
+    position: fixed;
+    right: -768px;
+    top: 100;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    transition: 0.4s ease-in-out;
+    overflow: hidden;
+  }
+  .row{
+    float: right;
+    width: 60px;
+  }
+  .menu ul li {
+    display: block;
+    text-align: left;
+    margin: 0;
+    padding: 10px 0 10px 26px;
+    border-bottom: 1px solid #312f2f;
+  }
+  .menu_icon {
+    display: inline-block;
+    position: relative;
+    padding-right: 10px;
+    padding-bottom: 20px;
+  }
+
+  .menu_icon span {
+    width: 42px;
+    height: 5px;
+    background: #ffffff;
+    display: block;
+    transition: 0.2s ease-in-out;
+  }
+  .menu_icon span:nth-child(2) {
+    margin: 4px 0;
+  }
+  .menu_iconClass span:nth-child(2) {
     display: none;
   }
 
-  nav {
-    background-color: #2a2a3d;
-    overflow: hidden;
+  .menu_iconClass span:nth-child(1) {
+    transform: rotate(40deg);
   }
 
-  .nav-right {
-    float: right;
+  .menu_iconClass span:nth-child(3) {
+    transform: rotate(-40deg);
+    margin-top: -3px;
   }
 
-  nav li {
-    display: inline-block;
-    padding: 10px;
-  }
-  nav a {
-    color: #f2f2f2;
-    padding: 10;
-    text-decoration: none;
-    font-size: 17px;
-    font-family: "JetBrains Mono", monospace;
+  .menuClasse {
+    right: 0;
+    transition: 0.4s ease-in-out;
   }
 }
