--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,12 +1,9 @@
-header {
-  padding: 45px 0;
-  background-color: #222;
-}
 
-.menu {
-  margin-top: 10px;
+header {
+  background-color: #2a2a3d;
   overflow: hidden;
 }
+
 .menu ul {
   padding: 0;
   margin: 0;
@@ -17,7 +14,7 @@ header {
   list-style-type: none;
 
   display: inline-block;
-
+  background-color: #2a2a3d;
   padding-left: 12px;
   padding-right: 10px;
 
@@ -27,43 +24,52 @@ header {
   list-style: none;
   text-decoration: none;
   color: #ffffff;
+  background-color: #2a2a3d;
 }
 .menu ul li a:hover {
   color: #e9c62c;
   cursor: pointer;
   transition: 0.4s ease-in-out;
 }
+@media (min-width: 768px) {
+  
+}
+
 @media (max-width: 767px) {
+  .menu-right {
+    float: right;
+    padding: 10px 10px 10px 0;
+    background-color: #2a2a3d;
+  }
   .menu {
     position: fixed;
+    top: 34px;
     right: -768px;
-    top: 100;
-    width: 100%;
+    width: 50%;
     height: 100%;
-    background: #222;
+    background: #464662;
     transition: 0.4s ease-in-out;
     overflow: hidden;
   }
-  .row{
-    float: right;
-    width: 60px;
-  }
+
   .menu ul li {
     display: block;
     text-align: left;
     margin: 0;
     padding: 10px 0 10px 26px;
-    border-bottom: 1px solid #312f2f;
+    border-bottom: 1px solid #464662;
+    background-color: #464662;
+  }
+  .menu ul li a{
+    background-color: #464662;
   }
   .menu_icon {
     display: inline-block;
     position: relative;
-    padding-right: 10px;
-    padding-bottom: 20px;
   }
 
   .menu_icon span {
-    width: 42px;
+    width: 40px;
     height: 5px;
     background: #ffffff;
     display: block;
