--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,28 +1,23 @@
 <header>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3 col-sm-3 col-xs-3"></div>
-
-      <div class="col-md-9 col-sm-9 col-9 text-end">
-        <div
-          class="menu_icon"
-          [class.menu_iconClass]="menu_icon_variable"
-          (click)="openMenu()"
-        >
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-
-        <div class="menu" [class.menuClasse]="menuVariable">
-          <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">A propos</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Mon compte</a></li>
-          </ul>
-        </div>
-      </div>
+  <div class="menu-right">
+    <div
+      class="menu_icon"
+      [class.menu_iconClass]="menu_icon_variable"
+      (click)="openMenu()"
+    >
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
+  </div>
+
+  <div class="menu" [class.menuClasse]="menuVariable">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Sobre</a></li>
+      <li><a href="#">Experiências</a></li>
+      <li><a href="#">Projetos</a></li>
+      <li><a href="#">Contato</a></li>
+    </ul>
   </div>
 </header>
