--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,17 +2,18 @@
 header {
   background-color: #2a2a3d;
   overflow: hidden;
+  height: 35px;
 }
 
 .menu ul {
-  padding: 0;
+  padding: 8px 0 0 0;
   margin: 0;
   float: right;
+  background-color: #2a2a3d;
 }
 
 .menu ul li {
   list-style-type: none;
-
   display: inline-block;
   background-color: #2a2a3d;
   padding-left: 12px;
@@ -27,36 +28,48 @@ header {
   background-color: #2a2a3d;
 }
 .menu ul li a:hover {
-  color: #e9c62c;
+  color: #d29bff;
   cursor: pointer;
-  transition: 0.4s ease-in-out;
-}
-@media (min-width: 768px) {
-  
+  transition: 0.6s ease-in-out;
 }
 
 @media (max-width: 767px) {
+  header {
+    background-color: #2a2a3d;
+    overflow: hidden;
+  }
   .menu-right {
     float: right;
-    padding: 10px 10px 10px 0;
+    padding: 7px 8px 10px 0;
     background-color: #2a2a3d;
   }
   .menu {
     position: fixed;
     top: 34px;
     right: -768px;
-    width: 50%;
+    width: 35%;
     height: 100%;
     background: #464662;
     transition: 0.4s ease-in-out;
     overflow: hidden;
   }
 
+  .menu ul{
+    background-color: #464662;
+    align-content: center;
+    align-items: center;
+    display: contents;
+  }
+
+  .menu li{
+    align-content: center;
+    align-items: center;
+  }
   .menu ul li {
     display: block;
-    text-align: left;
+    text-align: center;
     margin: 0;
-    padding: 10px 0 10px 26px;
+    padding: 10px 20px 10px 26px;
     border-bottom: 1px solid #464662;
     background-color: #464662;
   }
@@ -69,8 +82,8 @@ header {
   }
 
   .menu_icon span {
-    width: 40px;
-    height: 5px;
+    width: 30px;
+    height: 4px;
     background: #ffffff;
     display: block;
     transition: 0.2s ease-in-out;
@@ -95,4 +108,5 @@ header {
     right: 0;
     transition: 0.4s ease-in-out;
   }
+
 }
