--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,11 +13,11 @@
 
   <div class="menu" [class.menuClasse]="menuVariable">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Sobre</a></li>
-      <li><a href="#">Experiências</a></li>
-      <li><a href="#">Projetos</a></li>
-      <li><a href="#">Contato</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">Sobre</a></li>
+      <li><a href="#experiences">Experiências</a></li>
+      <li><a href="#projects">Projetos</a></li>
+      <li><a href="#contact">Contato</a></li>
     </ul>
   </div>
 </header>
