fix: header css

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,9 @@
       <span></span>
     </div>
   </div>
-
+  <a href="#home" class="left-write">
+    < Ja1 />
+  </a>
   <div class="menu" [class.menuClasse]="menuVariable">
     <ul>
       <li><a href="#home">Home</a></li>
