--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,10 +1,30 @@
 
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;1,100;1,200&display=swap');
+
+
 header {
   background-color: #2a2a3d;
   overflow: hidden;
   height: 35px;
+  font-family: 'JetBrains Mono', monospace;
+  font-size: large;
 }
-
+.left-write {
+  float: left;
+  align-content: start;
+  align-items: start;
+  padding: 8px 0 0 0;
+  background-color: #2a2a3d;
+  font-size: large;
+  list-style: none;
+  text-decoration: none;
+  color: #ffffff;
+}
+.left-write:hover{
+    color: #d29bff;
+    cursor: pointer;
+    transition: 0.6s ease-in-out;
+}
 .menu ul {
   padding: 8px 0 0 0;
   margin: 0;
@@ -13,7 +33,6 @@ header {
 }
 
 .menu ul li {
-  list-style-type: none;
   display: inline-block;
   background-color: #2a2a3d;
   padding-left: 12px;
@@ -37,6 +56,7 @@ header {
   header {
     background-color: #2a2a3d;
     overflow: hidden;
+    font-size: 13px;
   }
   .menu-right {
     float: right;
@@ -54,14 +74,14 @@ header {
     overflow: hidden;
   }
 
-  .menu ul{
+  .menu ul {
     background-color: #464662;
     align-content: center;
     align-items: center;
     display: contents;
   }
 
-  .menu li{
+  .menu li {
     align-content: center;
     align-items: center;
   }
@@ -73,7 +93,7 @@ header {
     border-bottom: 1px solid #464662;
     background-color: #464662;
   }
-  .menu ul li a{
+  .menu ul li a {
     background-color: #464662;
   }
   .menu_icon {
@@ -108,5 +128,4 @@ header {
     right: 0;
     transition: 0.4s ease-in-out;
   }
-
 }
