change: portifolio design

--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,11 +1,29 @@
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+
 <div>
   <div class="home-text">
-    <p class="irish-font" style="font-size: 60px; padding-bottom: 30px">Olá!</p>
-    <p class="jolly-font" style="font-size: 35px">Sou o joão Henrique</p>
-    <p class="irish-font" style="font-size: 20px">mas podeme chamar de</p>
-    <p class="jolly-font" style="font-size: 35px">Jão</p>
-    <p class="irish-font" style="font-size: 18px">Estudante de Análise e Desenvolvimento de Sistemas</p>
-    <p class="jolly-font" style="font-size: 25px">e</p>
-    <p class="irish-font" style="font-size: 20px">Desenvolvedor</p>
+    <p style="font-size: 60px; padding-bottom: 22px">Olá!</p>
+    <p style="font-size: 30px">Sou o João Henrique</p>
+    <p style="font-size: 15px">Estudante e cientista de dados</p>
+    <div class="fa-icons">
+      <a target="_blank" href="https://github.com/Ja1zinh0/"
+        ><i class="fa fa-github" style="font-size: 65px"></i
+      ></a>
+      <a
+        target="_blank"
+        href="https://www.linkedin.com/in/joao-henrique-jorge-carlos/"
+      >
+        <i class="fa fa-linkedin-square" style="font-size: 65px"></i>
+      </a>
+      <a
+        target="_blank"
+        href="https://www.youtube.com/channel/UCzjzqPJQmu9Fl9Qg1qZpLqw"
+      >
+        <i class="fa fa-youtube-play" style="font-size: 65px"></i>
+      </a>
+    </div>
   </div>
 </div>
