--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -1,18 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap');
 
 @media (max-width: 767px) {
+
     .home-text{
         text-align: center;
-        color: white;
+        color: rgb(255, 255, 255);
         padding-top: 80px;
+        font-weight: 500;
     }
-    .irish-font{
-        font-family: 'Irish Grover', system-ui;
-        padding: 5px 0 5px 0;
+
+    .home-text a{
+        color: inherit; 
     }
-    .jolly-font{
-        font-family: 'Jolly Lodger', system-ui;
+    
+    .fa-icons{
+        display:flex;
+        justify-content: space-evenly;
+        padding-top: 20px;
     }
   }
   
