--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,12 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;1,100;1,200&display=swap');
 
-
 header {
-  background-color: #2a2a3d;
+  background-color: #2A2B47;
   overflow: hidden;
   height: 35px;
-  font-family: 'JetBrains Mono', monospace;
   font-size: large;
 }
 .left-write {
@@ -14,14 +12,14 @@ header {
   align-content: start;
   align-items: start;
   padding: 8px 0 0 12px;
-  background-color: #2a2a3d;
+  background-color: #2A2B47;
   font-size: large;
   list-style: none;
   text-decoration: none;
   color: #ffffff;
 }
 .left-write:hover{
-    color: #d29bff;
+    color: #e9bcf7;
     cursor: pointer;
     transition: 0.5s ease-in-out;
 }
@@ -29,12 +27,12 @@ header {
   padding: 8px 0 0 0;
   margin: 0;
   float: right;
-  background-color: #2a2a3d;
+  background-color: #2A2B47;
 }
 
 .menu ul li {
   display: inline-block;
-  background-color: #2a2a3d;
+  background-color: #2A2B47;
   padding-left: 12px;
   padding-right: 10px;
 
@@ -44,24 +42,24 @@ header {
   list-style: none;
   text-decoration: none;
   color: #ffffff;
-  background-color: #2a2a3d;
+  background-color: #2A2B47;
 }
 .menu ul li a:hover {
-  color: #d29bff;
+  color: #e9bcf7;
   cursor: pointer;
   transition: 0.5s ease-in-out;
 }
 
 @media (max-width: 767px) {
   header {
-    background-color: #2a2a3d;
+    background-color: #2A2B47;
     overflow: hidden;
     font-size: 13px;
   }
   .menu-right {
     float: right;
     padding: 7px 8px 10px 0;
-    background-color: #2a2a3d;
+    background-color: #2A2B47;
   }
   .menu {
     position: fixed;
@@ -69,13 +67,13 @@ header {
     right: -768px;
     width: 35%;
     height: 100%;
-    background: #464662;
+    background: #2A2B47;
     transition: 0.4s ease-in-out;
     overflow: hidden;
   }
 
   .menu ul {
-    background-color: #464662;
+    background-color: #2A2B47;
     align-content: center;
     align-items: center;
     display: contents;
@@ -90,11 +88,12 @@ header {
     text-align: center;
     margin: 0;
     padding: 10px 20px 10px 26px;
-    border-bottom: 1px solid #464662;
-    background-color: #464662;
+    border-bottom: 1px solid #2A2B47;
+    background-color: #2A2B47;
   }
   .menu ul li a {
-    background-color: #464662;
+    background-color: #2A2B47;
+    text-shadow: 2px 3px 2px #252422;
   }
   .menu_icon {
     display: inline-block;
