--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;1,100;1,200&display=swap');
+
 *{
     margin: 0;
 	padding: 0;
@@ -5,7 +7,8 @@
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	background-color: #343448;
+	background-color: #5B5271;
+	font-family: 'JetBrains Mono', monospace;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0;}
