feature: about me button html and css

--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -25,5 +25,13 @@
         <i class="fa fa-youtube-play" style="font-size: 65px"></i>
       </a>
     </div>
+    <div class="rectangle-center">
+      <a href="about">
+        <div class="rectangle">Sobre mim</div>
+      </a>
+    </div>
+    <div class="arrow-pos">
+      <span class="arrow">&#8595;</span>
+    </div>
   </div>
 </div>
