--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -11,11 +11,41 @@
     .home-text a{
         color: inherit; 
     }
-    
+
     .fa-icons{
         display:flex;
         justify-content: space-evenly;
         padding-top: 20px;
+    }
+    .rectangle {
+        height: 50px;
+        width: 110px;
+        background-color: #2A2B47;
+        border-radius: 25px;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        font-size: 16px;
+    }
+
+    .rectangle-center{
+        padding-top: 75px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .rectangle-center a{
+        text-decoration: none;
+    }
+
+
+    .arrow{
+        color: #2A2B47;
+        font-size: 30px;
+    }
+
+    .arrow-pos{
+        padding-top: 13px;
     }
   }
   
