--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -3,11 +3,11 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 />
 
-<div>
+<div class="center-desktop">
   <div class="home-text">
-    <p style="font-size: 60px; padding-bottom: 22px">Olá!</p>
-    <p style="font-size: 30px">Sou o João Henrique</p>
-    <p style="font-size: 15px">Estudante e cientista de dados</p>
+    <p class="ola-style">Olá!</p>
+    <p class="presentation-style">Sou o João Henrique</p>
+    <p class="profession-style">Estudante e cientista de dados</p>
     <div class="fa-icons">
       <a target="_blank" href="https://github.com/Ja1zinh0/"
         ><i class="fa fa-github" style="font-size: 65px"></i
