new html organization

--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,37 +1,14 @@
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
-
-<div class="center-desktop">
-  <div class="home-text">
-    <p class="ola-style">Olá!</p>
-    <p class="presentation-style">Sou o João Henrique</p>
-    <p class="profession-style">Estudante e cientista de dados</p>
-    <div class="fa-icons">
-      <a target="_blank" href="https://github.com/Ja1zinh0/"
-        ><i class="fa fa-github" style="font-size: 65px"></i
-      ></a>
-      <a
-        target="_blank"
-        href="https://www.linkedin.com/in/joao-henrique-jorge-carlos/"
-      >
-        <i class="fa fa-linkedin-square" style="font-size: 65px"></i>
-      </a>
-      <a
-        target="_blank"
-        href="https://www.youtube.com/channel/UCzjzqPJQmu9Fl9Qg1qZpLqw"
-      >
-        <i class="fa fa-youtube-play" style="font-size: 65px"></i>
-      </a>
+<body>
+  <main>
+    <div class="home">
+      <div class="home-text">
+        <p class="ola-style">Olá!</p>
+        <p class="pres-style">Sou o João Henrique</p>
+        <p class="me-style">Estudante e cientista de dados</p>
+      </div>
+      <figure>
+        <img class="brain" src="assets/brain.gif" />
+      </figure>
     </div>
-    <div class="rectangle-center">
-      <a href="about">
-        <div class="rectangle">Sobre mim</div>
-      </a>
-    </div>
-    <div class="arrow-pos">
-      <span class="arrow">&#8595;</span>
-    </div>
-  </div>
-</div>
+  </main>
+</body>
