new feature: about

--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -4,11 +4,26 @@
       <div class="home-text">
         <p class="ola-style">Olá!</p>
         <p class="pres-style">Sou o João Henrique</p>
-        <p class="me-style">Estudante e cientista de dados</p>
+        <p class="me-style">Estudante e desenvolvedor</p>
       </div>
       <figure>
         <img class="brain" src="assets/brain.gif" />
       </figure>
+    </div>
+
+    <div class="about">
+      <div class="about-background">
+        <div class="about-text">
+          <div class="about-text-align">
+            <p class="about-title">Sobre mim</p>
+            <p class="about-centerText">
+              Tenho 21 anos e sou apaixonado por tecnologia desde os 12.
+              Atualmente curso Análise e Desenvolvimento de Sistemas e nas horas
+              vagas estudo para me aprimorar profissionalmente.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 </body>
