--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -5,6 +5,7 @@
 
 .home-text {
   padding-top: 15%;
+  padding-left: 15px;
   color: white;
   line-height: 30px;
 }
@@ -21,6 +22,47 @@
 .me-style {
   font-size: 1.5rem;
   padding-left: 5px;
+}
+
+.about {
+  padding-top: 10%;
+  display: flex;
+  justify-content: center;
+}
+.about-background {
+  height: 600px;
+  width: 100%;
+  background-color: #6e5774;
+  display: flex;
+  justify-content: center;
+}
+
+.about-text {
+  background-color: #6e5774;
+  display: flex;
+  justify-content: center;
+}
+.about-text-align {
+  background-color: #6e5774;
+  width: 90%;
+  font-size: large;
+  text-align: center;
+}
+
+.about-text-align p {
+  background-color: #6e5774;
+  color: white;
+}
+
+.about-title{
+  padding: 20px 0 30px 0;
+  font-size: 60px;
+}
+
+.about-centerText{
+  font-size: 30px;
+  word-spacing: 1px;
+  line-height:110%;
 }
 @media (max-width: 800px) {
 }
