--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -24,6 +24,12 @@
   padding-left: 5px;
 }
 
+.fa-icons a{
+  color: white;
+  padding-right: 25px;
+  font-size: 65px;
+}
+
 .about {
   padding-top: 10%;
   display: flex;
