--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -11,22 +11,22 @@
 }
 
 .ola-style {
-  font-size: 6rem;
+  font-size: 80px;
   padding-bottom: 30px;
 }
 
 .pres-style {
-  font-size: 4rem;
+  font-size: 64px;
 }
 
 .me-style {
-  font-size: 1.5rem;
+  font-size: 24px;
   padding-left: 5px;
 }
 
 .fa-icons a{
   color: white;
-  padding-right: 40px;
+  padding-right: 30px;
   font-size: 65px;
 }
 
