--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -31,6 +31,15 @@
             <i class="fa fa-envelope" aria-hidden="true"></i
           ></a>
         </div>
+        <div class="resume-button-div">
+          <div class="resume-button">
+            <a
+              target="_blank"
+              href="https://drive.google.com/file/d/1v2r074PHAGQ7Ii8kgYD186Xu5SND0Vi_/view?usp=sharing"
+              >Meu Currículo</a
+            >
+          </div>
+        </div>
       </div>
       <figure>
         <img class="brain" src="assets/brain.gif" />
@@ -47,6 +56,51 @@
               Atualmente curso Análise e Desenvolvimento de Sistemas e nas horas
               vagas estudo para me aprimorar profissionalmente.
             </p>
+
+            <p style="padding-top: 100px; font-size: 35px">
+              Sou proeficiente em:
+            </p>
+            <div class="prof-boxes">
+              <div class="prof-box1">
+                <div class="front-box">
+                  <p>Front-End</p>
+                </div>
+                <div class="front-content">
+                  <p>Angular</p>
+                  <p>HTML</p>
+                  <p>CSS</p>
+                </div>
+              </div>
+              <div class="prof-box2">
+                <div class="mobile-box">
+                  <p>Mobile</p>
+                </div>
+                <div class="mobile-content">
+                  <p>Flutter</p>
+                  <p>Dart</p>
+                </div>
+              </div>
+              <div class="prof-box3">
+                <div class="back-box">
+                  <p>Back-End</p>
+                </div>
+                <div class="back-content">
+                  <p>Python</p>
+                  <p>C++</p>
+                  <p>SQL</p>
+                </div>
+              </div>
+              <div class="prof-box4">
+                <div class="tecn-box">
+                  <p>Tecnologias</p>
+                </div>
+                <div class="tecn-content">
+                  <p>Git</p>
+                  <p>Github</p>
+                  <p>Figma</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
