--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -105,5 +105,39 @@
         </div>
       </div>
     </div>
+
+    <div class="proj-title">
+      <p>Meus projetos</p>
+    </div>
+
+    <div class="projects">
+      <div class="proj-screen1">
+        <img src="assets/maismix_tela.png">
+      </div>
+
+      <div class="proj-screen2">
+        <p>
+          WIP
+        </p>
+      </div>
+
+      <div class="proj-screen3">
+        <p>
+          WIP
+        </p>
+      </div>
+
+      <div class="vermais">
+        <div class="vermais-css">
+          <a href="">
+            <p>Ver mais</p>
+          </a>
+
+          <a href="">
+            <span>&#8594;</span>
+          </a>
+        </div>
+      </div>
+    </div>
   </main>
 </body>
