--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -4,6 +4,7 @@
 />
 
 <body>
+  <main>
     <div class="home">
       <div class="home-text">
         <p class="ola-style">Olá!</p>
@@ -138,4 +139,5 @@
         </div>
       </div>
     </div>
+  </main>
 </body>
