--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -46,5 +46,94 @@
       </figure>
     </div>
 
+    <div class="about">
+      <div class="about-background">
+        <div class="about-text">
+          <div class="about-text-align">
+            <p class="about-title">Sobre mim</p>
+            <p class="about-centerText">
+              Tenho 21 anos e sou apaixonado por tecnologia desde os 12.
+              Atualmente curso Análise e Desenvolvimento de Sistemas e nas horas
+              vagas estudo para me aprimorar profissionalmente.
+            </p>
+
+            <p style="padding-top: 100px; font-size: 35px">
+              Sou proeficiente em:
+            </p>
+            <div class="prof-boxes">
+              <div class="prof-box1">
+                <div class="front-box">
+                  <p>Front-End</p>
+                </div>
+                <div class="front-content">
+                  <p>Angular</p>
+                  <p>HTML</p>
+                  <p>CSS</p>
+                </div>
+              </div>
+              <div class="prof-box2">
+                <div class="mobile-box">
+                  <p>Mobile</p>
+                </div>
+                <div class="mobile-content">
+                  <p>Flutter</p>
+                  <p>Dart</p>
+                </div>
+              </div>
+              <div class="prof-box3">
+                <div class="back-box">
+                  <p>Back-End</p>
+                </div>
+                <div class="back-content">
+                  <p>Python</p>
+                  <p>C++</p>
+                  <p>SQL</p>
+                </div>
+              </div>
+              <div class="prof-box4">
+                <div class="tecn-box">
+                  <p>Tecnologias</p>
+                </div>
+                <div class="tecn-content">
+                  <p>Git</p>
+                  <p>Github</p>
+                  <p>Figma</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="proj-title">
+      <p>Meus projetos</p>
+    </div>
+
+    <div class="projects">
+      <div class="proj-screen1">
+        <img src="assets/maismix_tela.png" />
+      </div>
+
+      <div class="proj-screen2">
+        <p>WIP</p>
+      </div>
+
+      <div class="proj-screen3">
+        <p>WIP</p>
+      </div>
+
+      <div class="vermais">
+        <div class="vermais-css">
+          <a href="">
+            <p>Ver mais</p>
+          </a>
+
+          <a href="">
+            <span>&#8594;</span>
+          </a>
+        </div>
+      </div>
+    </div>
   </main>
 </body>
