--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -4,19 +4,19 @@
 }
 
 .home-text {
-  padding-top: 10%;
-  padding-left: 15px;
-  color: white;
-  line-height: 30px;
+  padding-top: 10% !important;
+  padding-left: 15px !important;
+  color: white !important;
+  line-height: 30px !important;
 }
 
 .ola-style {
-  font-size: 80px !important;;
-  padding-bottom: 30px !important;;
+  font-size: 80px !important;
+  padding-bottom: 30px !important;
 }
 
 .pres-style {
-  font-size: 64px !important;;
+  font-size: 64px !important;
 }
 
 .me-style {
