--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -107,21 +107,20 @@
 </div>
 
 <div>
-
   <div class="projects">
-    <div class="proj-padding">
+    <div style="padding-right: 180px;">
       <div class="proj-screen1">
         <img src="assets/maismix_tela.png" />
       </div>
     </div>
-  
-    <div class="proj-padding">
+
+    <div>
       <div class="proj-screen2">
         <p>WIP</p>
       </div>
     </div>
-  
-    <div class="proj-padding">
+
+    <div style="padding-left: 180px;">
       <div class="proj-screen3">
         <p>WIP</p>
       </div>
