--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
 <app-body></app-body>
+<app-about></app-about>
+<app-projects></app-projects>
+<app-contact></app-contact>
 <router-outlet></router-outlet>
