added send button

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -43,5 +43,9 @@
         <textarea class="msg_field" rows="1" cols="25" name="msg"></textarea>
       </div>
     </div>
+
+    <div class="send-btn-style">
+      <div class="send-btn"><p>Enviar</p></div>
+    </div>
   </div>
 </div>
