--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -31,9 +31,6 @@
   background: transparent;
 }
 
-.name_field:focus {
-}
-
 .email_field {
   font-family: inherit;
   width: 360px;
@@ -46,8 +43,6 @@
   background: transparent;
 }
 
-.email_field:focus {
-}
 .msg-div {
   display: flex;
   justify-content: center;
@@ -73,5 +68,24 @@
   resize: none;
 }
 
-.msg_field:focus {
+.send-btn{
+  width: 240px;
+  height: 50px;
+  background-color: #5B5271;
+  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.send-btn p{
+  background-color: #5B5271;
+  color: white;
+  font-size: 25px;
+}
+
+.send-btn-style{
+  padding-top: 60px;
+  display: flex;
+  justify-content: center;
 }
