--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,6 +8,7 @@
     <p class="ola-style">Olá!</p>
     <p class="pres-style">Sou o João Henrique</p>
     <p class="me-style">Estudante e desenvolvedor</p>
+    <p>*Site em desenvolvimento*</p>
     <div class="fa-icons">
       <a target="_blank" href="https://github.com/Ja1zinh0/"
         ><i class="fa fa-github"></i
@@ -33,7 +34,7 @@
       <div class="resume-button">
         <a
           target="_blank"
-          href="https://drive.google.com/file/d/1v2r074PHAGQ7Ii8kgYD186Xu5SND0Vi_/view?usp=sharing"
+          href="https://drive.google.com/file/d/1c5VXJiXdenSL6uTmoIbi8QeSGCvKls3X/view?usp=sharing"
           >Meu Currículo</a
         >
       </div>
