--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,194 +1,208 @@
-
 .about {
-    padding-top: 30%;
-    display: flex;
-    justify-content: center;
-  }
-  .about-background {
-    height: 650px;
-    width: 100%;
-    background-color: #6e5774;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .about-text {
-    background-color: #6e5774;
-    display: flex;
-    justify-content: center;
-  }
-  .about-text-align {
-    background-color: #6e5774;
-    width: 90%;
-    font-size: large;
-    text-align: center;
-  }
-  
-  .about-text-align p {
-    background-color: #6e5774;
-    color: white;
-  }
-  
-  .about-title {
-    padding: 20px 0 30px 0;
-    font-size: 60px;
-  }
-  
-  .about-centerText {
-    font-size: 30px;
-    word-spacing: 1px;
-    line-height: 110%;
-  }
-  
-  .prof-boxes {
-    background-color: #6e5774;
-    display: flex;
-    justify-content: space-around;
-    padding-top: 30px;
-  }
-  
-  .prof-box1 {
-    width: 250px;
-    height: 236px;
-    background-color: #403951;
-    border-radius: 30px;
-    border: 2px solid black;
-  }
-  
-  .prof-box2 {
-    width: 250px;
-    height: 236px;
-    background-color: #403951;
-    border-radius: 30px;
-    border: 2px solid black;
-  }
-  
-  .prof-box3 {
-    width: 250px;
-    height: 236px;
-    background-color: #403951;
-    border-radius: 30px;
-    border: 2px solid black;
-  }
-  
-  .prof-box4 {
-    width: 250px;
-    height: 236px;
-    background-color: #403951;
-    border-radius: 30px;
-    border: 2px solid black;
-  }
-  
-  .front-box {
-    font-size: 35px;
-    background-color: #403951;
-    text-align: center;
-    justify-content: center;
-    width: 200px;
-    padding-top: 10px;
-    transform: translate(25px, 0);
-  }
-  
-  .front-box p {
-    background-color: #403951;
-  }
-  
-  .front-content {
-    line-height: 120%;
-    font-size: 25px;
-    padding-top: 50px;
-    padding-left: 30%;
-    height: auto;
-    background-color: #403951;
-    text-align: start;
-  }
-  
-  .front-content p {
-    background-color: #403951;
-  }
-  
-  .mobile-box {
-    font-size: 35px;
-    background-color: #403951;
-    text-align: center;
-    justify-content: center;
-    width: 200px;
-    padding-top: 10px;
-    transform: translate(25px, 0);
-  }
-  
-  .mobile-box p {
-    background-color: #403951;
-  }
-  
-  .mobile-content {
-    line-height: 120%;
-    font-size: 25px;
-    padding-top: 50px;
-    padding-left: 30%;
-    height: auto;
-    background-color: #403951;
-    text-align: start;
-  }
-  
-  .mobile-content p {
-    background-color: #403951;
-  }
-  
-  .back-box {
-    font-size: 35px;
-    background-color: #403951;
-    text-align: center;
-    justify-content: center;
-    width: 200px;
-    padding-top: 10px;
-    transform: translate(25px, 0);
-  }
-  
-  .back-box p {
-    background-color: #403951;
-  }
-  
-  .back-content {
-    line-height: 120%;
-    font-size: 25px;
-    padding-top: 50px;
-    padding-left: 30%;
-    height: auto;
-    background-color: #403951;
-    text-align: start;
-  }
-  
-  .back-content p {
-    background-color: #403951;
-  }
-  
-  .tecn-box {
-    font-size: 33px;
-    background-color: #403951;
-    text-align: center;
-    justify-content: center;
-    width: 200px;
-    padding-top: 10px;
-    transform: translate(18px, 0);
-  }
-  
-  .tecn-box p {
-    background-color: #403951;
-  }
-  
-  .tecn-content {
-    line-height: 120%;
-    font-size: 25px;
-    padding-top: 50px;
-    padding-left: 30%;
-    height: auto;
-    background-color: #403951;
-    text-align: start;
-  }
-  
-  .tecn-content p {
-    background-color: #403951;
-  }
-  
-  
+  padding-top: 30%;
+  display: flex;
+  justify-content: center;
+}
+.about-background {
+  height: 650px;
+  width: 100%;
+  background-color: #6e5774;
+  display: flex;
+  justify-content: center;
+}
+
+.about-text {
+  background-color: #6e5774;
+  display: flex;
+  justify-content: center;
+}
+.about-text-align {
+  background-color: #6e5774;
+  width: 90%;
+  font-size: large;
+  text-align: center;
+}
+
+.about-text-align p {
+  background-color: #6e5774;
+  color: white;
+}
+
+.about-title {
+  padding: 20px 0 30px 0;
+  font-size: 60px;
+}
+
+.about-centerText {
+  font-size: 30px;
+  word-spacing: 1px;
+  line-height: 110%;
+}
+
+.prof-boxes {
+  background-color: #6e5774;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 30px;
+}
+
+.prof-box1 {
+  width: 250px;
+  height: 236px;
+  background-color: #403951;
+  border-radius: 30px;
+  border: 2px solid black;
+}
+
+.prof-box2 {
+  width: 250px;
+  height: 236px;
+  background-color: #403951;
+  border-radius: 30px;
+  border: 2px solid black;
+}
+
+.prof-box3 {
+  width: 250px;
+  height: 236px;
+  background-color: #403951;
+  border-radius: 30px;
+  border: 2px solid black;
+}
+
+.prof-box4 {
+  width: 250px;
+  height: 236px;
+  background-color: #403951;
+  border-radius: 30px;
+  border: 2px solid black;
+}
+
+.front-box {
+  font-size: 35px;
+  background-color: #403951;
+  text-align: center;
+  justify-content: center;
+  width: 200px;
+  padding-top: 10px;
+  transform: translate(25px, 0);
+}
+
+.front-box p {
+  background-color: #403951;
+}
+
+.front-content {
+  line-height: 120%;
+  font-size: 25px;
+  padding-top: 50px;
+  padding-left: 30%;
+  height: auto;
+  background-color: #403951;
+  text-align: start;
+}
+
+.front-content p {
+  background-color: #403951;
+}
+
+.mobile-box {
+  font-size: 35px;
+  background-color: #403951;
+  text-align: center;
+  justify-content: center;
+  width: 200px;
+  padding-top: 10px;
+  transform: translate(25px, 0);
+}
+
+.mobile-box p {
+  background-color: #403951;
+}
+
+.mobile-content {
+  line-height: 120%;
+  font-size: 25px;
+  padding-top: 50px;
+  padding-left: 30%;
+  height: auto;
+  background-color: #403951;
+  text-align: start;
+}
+
+.mobile-content p {
+  background-color: #403951;
+}
+
+.back-box {
+  font-size: 35px;
+  background-color: #403951;
+  text-align: center;
+  justify-content: center;
+  width: 200px;
+  padding-top: 10px;
+  transform: translate(25px, 0);
+}
+
+.back-box p {
+  background-color: #403951;
+}
+
+.back-content {
+  line-height: 120%;
+  font-size: 25px;
+  padding-top: 50px;
+  padding-left: 30%;
+  height: auto;
+  background-color: #403951;
+  text-align: start;
+}
+
+.back-content p {
+  background-color: #403951;
+}
+
+.tecn-box {
+  font-size: 33px;
+  background-color: #403951;
+  text-align: center;
+  justify-content: center;
+  width: 200px;
+  padding-top: 10px;
+  transform: translate(18px, 0);
+}
+
+.tecn-box p {
+  background-color: #403951;
+}
+
+.tecn-content {
+  line-height: 120%;
+  font-size: 25px;
+  padding-top: 50px;
+  padding-left: 30%;
+  height: auto;
+  background-color: #403951;
+  text-align: start;
+}
+
+.tecn-content p {
+  background-color: #403951;
+}
+
+@media (max-width: 900px){
+    .about-background{
+      width: 100%;
+    }
+    .about-text{
+      text-size-adjust: auto;
+    }
+
+    .prof-boxes{
+      position: relative;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+}
