--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,9 +1,9 @@
 <div class="contact">
   <div class="contact-text">
     <div>
-      <p style="font-size: 45px">Envie uma mensagem!</p>
-      <p style="font-size: 20px">Possui alguma proposta ou pergunta?</p>
-      <p style="font-size: 20px">Vá em frente e envie!</p>
+      <p class="send-msg-text">Envie uma mensagem!</p> 
+      <p class="contact-finaltxt">Possui alguma proposta ou pergunta?</p>
+      <p class="contact-finaltxt">Vá em frente e envie!</p>
     </div>
   </div>
 
@@ -17,8 +17,6 @@
           id="name"
           name="name"
           required
-          minlength="4"
-          maxlength="8"
           size="10"
         />
       </div>
@@ -31,8 +29,6 @@
           id="email"
           name="email"
           required
-          minlength="4"
-          maxlength="8"
           size="10"
         />
       </div>
