--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -4,19 +4,19 @@
 
 <div>
   <div class="projects">
-    <div style="padding-right: 180px">
+    <div class="proj-centerdiv">
       <div class="proj-screen1">
         <img src="assets/maismix_tela.png" />
       </div>
     </div>
 
-    <div>
+    <div class="proj-centerdiv">
       <div class="proj-screen2">
         <p>WIP</p>
       </div>
     </div>
 
-    <div style="padding-left: 180px">
+    <div class="proj-centerdiv">
       <div class="proj-screen3">
         <p>WIP</p>
       </div>
