--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -89,3 +89,29 @@
   justify-content: center;
   padding-bottom: 300px;
 }
+
+@media (max-width: 900px){
+  .contact-text{
+    text-align: start;
+    line-height: 100%;
+  }
+  .send-msg-text{
+    font-size: 30px;
+  }
+  .contact-finaltxt{
+    font-size: 15px;
+  }
+  .contact{
+    
+  }
+  .name_field{
+    width: fit-content;
+  }
+  .email_field{
+    width: fit-content;
+  }
+
+  .msg_field{
+    width: fit-content;
+  }
+}
