fixing contact and footer mobile css

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,7 +9,7 @@
 
   <div class="textfield">
     <div class="top-field">
-      <div>
+      <div class="name-field-div">
         <label for="name">Seu nome: </label>
         <input
           class="name_field"
@@ -21,7 +21,7 @@
         />
       </div>
       <div style="width: 200px"></div>
-      <div>
+      <div class="email-field-div">
         <label for="email">Seu email: </label>
         <input
           class="email_field"
