--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -87,7 +87,7 @@
   padding-top: 60px;
   display: flex;
   justify-content: center;
-  padding-bottom: 300px;
+  padding-bottom: 150px;
 }
 
 @media (max-width: 900px){
@@ -106,6 +106,14 @@
   }
   .name_field{
     width: fit-content;
+  }
+
+  .name-field-div{
+    padding-left: 10px;
+  }
+
+  .email-field-div{
+    padding-right: 10px;
   }
   .email_field{
     width: fit-content;
