--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,17 +1,17 @@
-
 <div class="about">
-    <div class="about-background">
-      <div class="about-text">
-        <div class="about-text-align">
-          <p class="about-title">Sobre mim</p>
-          <p class="about-centerText">
-            Tenho 21 anos e sou apaixonado por tecnologia desde os 12. Atualmente
-            curso Análise e Desenvolvimento de Sistemas e nas horas vagas estudo
-            para me aprimorar profissionalmente.
-          </p>
-  
-          <p style="padding-top: 100px; font-size: 28px">Sou proeficiente em:</p>
-          <div class="prof-boxes">
+  <div class="about-background">
+    <div class="about-text">
+      <div class="about-text-align">
+        <p class="about-title">Sobre mim</p>
+        <p class="about-centerText">
+          Tenho 21 anos e sou apaixonado por tecnologia desde os 12. Atualmente
+          curso Análise e Desenvolvimento de Sistemas e nas horas vagas estudo
+          para me aprimorar profissionalmente.
+        </p>
+
+        <p style="padding-top: 100px; font-size: 28px">Sou proeficiente em:</p>
+        <div class="prof-boxes">
+          <div class="box-styles">
             <div class="prof-box1">
               <div class="front-box">
                 <p>Front-End</p>
@@ -22,6 +22,8 @@
                 <p>CSS</p>
               </div>
             </div>
+          </div>
+          <div class="box-styles">
             <div class="prof-box2">
               <div class="mobile-box">
                 <p>Mobile</p>
@@ -31,6 +33,8 @@
                 <p>Dart</p>
               </div>
             </div>
+          </div>
+          <div class="box-styles">
             <div class="prof-box3">
               <div class="back-box">
                 <p>Back-End</p>
@@ -41,6 +45,8 @@
                 <p>SQL</p>
               </div>
             </div>
+          </div>
+          <div class="box-styles">
             <div class="prof-box4">
               <div class="tecn-box">
                 <p>Tecnologias</p>
@@ -56,4 +62,4 @@
       </div>
     </div>
   </div>
-  
+</div>
