--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -10,7 +10,9 @@
   font-size: 60px;
   padding-top: 12%;
 }
-
+.proj-centerdiv{
+  padding: 0px 50px 0px 50px;
+}
 .proj-screen1 {
   width: 267px;
   height: 454px;
