--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,6 +3,8 @@ header {
   overflow: hidden;
   height: 40px;
   font-size: large;
+  position: fixed;
+  width: 100%;
 }
 .left-write {
   float: left;
@@ -54,6 +56,7 @@ header {
     overflow: hidden;
     font-size: 13px;
   }
+
   .menu-right {
     float: right;
     padding: 7px 8px 10px 0;
@@ -92,6 +95,7 @@ header {
   .menu ul li a {
     background-color: #2a2b47;
     text-shadow: 2px 3px 2px #252422;
+    font-size: 15px;
   }
   .menu_icon {
     display: inline-block;
@@ -126,4 +130,5 @@ header {
     right: 0;
     transition: 0.4s ease-in-out;
   }
+  
 }
