--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -12,11 +12,11 @@
         <p style="padding-top: 100px; font-size: 28px">Sou proeficiente em:</p>
         <div class="prof-boxes">
           <div class="box-styles">
-            <div class="prof-box1">
+            <div class="prof-box">
               <div class="front-box">
                 <p>Front-End</p>
               </div>
-              <div class="front-content">
+              <div>
                 <p>Angular</p>
                 <p>HTML</p>
                 <p>CSS</p>
@@ -24,22 +24,22 @@
             </div>
           </div>
           <div class="box-styles">
-            <div class="prof-box2">
-              <div class="mobile-box">
+            <div class="prof-box">
+              <div>
                 <p>Mobile</p>
               </div>
-              <div class="mobile-content">
+              <div>
                 <p>Flutter</p>
                 <p>Dart</p>
               </div>
             </div>
           </div>
           <div class="box-styles">
-            <div class="prof-box3">
+            <div class="prof-box">
               <div class="back-box">
                 <p>Back-End</p>
               </div>
-              <div class="back-content">
+              <div>
                 <p>Python</p>
                 <p>C++</p>
                 <p>SQL</p>
@@ -47,11 +47,11 @@
             </div>
           </div>
           <div class="box-styles">
-            <div class="prof-box4">
-              <div class="tecn-box">
+            <div class="prof-box">
+              <div>
                 <p>Tecnologias</p>
               </div>
-              <div class="tecn-content">
+              <div>
                 <p>Git</p>
                 <p>Github</p>
                 <p>Figma</p>
