--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,8 +1,8 @@
 <div class="about">
   <div class="about-background">
-    <div class="about-text">
+    <div class="about-text" >
       <div class="about-text-align">
-        <p class="about-title">Sobre mim</p>
+        <p class="about-title" id="about">Sobre mim</p>
         <p class="about-centerText">
           Tenho 21 anos e sou apaixonado por tecnologia desde os 12. Atualmente
           curso Análise e Desenvolvimento de Sistemas e nas horas vagas estudo
