--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 />
 
-<div class="home">
+<div class="home" id="home">
   <div class="home-text">
     <p class="ola-style">Olá!</p>
     <p class="pres-style">Sou o João Henrique</p>
