--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact">
+<div class="contact" id="contact">
   <div class="contact-text">
     <div>
       <p class="send-msg-text">Envie uma mensagem!</p> 
