--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -6,7 +6,9 @@
   <div class="projects">
     <div class="proj-centerdiv">
       <div class="proj-screen1">
-        <img src="assets/maismix_tela.png" />
+        <a routerLink="/maismix">
+          <img src="assets/maismix_tela.png" />
+        </a>
       </div>
     </div>
 
