--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<app-header></app-header>
-<app-body></app-body>
-<app-about></app-about>
-<app-projects></app-projects>
-<app-contact></app-contact>
-<app-footer></app-footer>
-<router-outlet></router-outlet>
+<div>
+    <router-outlet></router-outlet>
+</div>
