--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,10 +15,10 @@
   </a>
   <div class="menu" [class.menuClasse]="menuVariable">
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">Sobre</a></li>
-      <li><a href="#projects">Projetos</a></li>
-      <li><a href="#contact">Contato</a></li>
+      <li><a href="main#home">Home</a></li>
+      <li><a href="main#about">Sobre</a></li>
+      <li><a href="main#projects">Projetos</a></li>
+      <li><a href="main#contact">Contato</a></li>
     </ul>
   </div>
 </header>
