--- a/src/app/view/maismix/maismix.component.html
+++ b/src/app/view/maismix/maismix.component.html
@@ -1,1 +1,37 @@
-<h1>teste</h1>
+<app-header></app-header>
+
+<div class="maismix-home">
+  <div class="title">
+    <p>MaisMix</p>
+  </div>
+
+  <div class="slider">
+    <div class="slides">
+      <input type="radio" name="radio-btn" id="radio1" />
+      <input type="radio" name="radio-btn" id="radio2" />
+      <input type="radio" name="radio-btn" id="radio3" />
+      <input type="radio" name="radio-btn" id="radio4" />
+
+      <div class="slide first">
+        <img src="assets/maismix_tela.png" alt="Imagem 1" />
+      </div>
+      <div class="slide">
+        <img src="assets/maismix2.png" alt="Imagem 2" />
+      </div>
+      <div class="slide">
+        <img src="assets/maismix3.png" alt="Imagem 3" />
+      </div>
+      <div class="slide">
+        <img src="assets/maismix4.png" alt="Imagem 4" />
+
+       
+      </div>
+    </div>
+    <div class="manual-navigation">
+      <label for="radio1" class="manual-btn"></label>
+      <label for="radio2" class="manual-btn"></label>
+      <label for="radio3" class="manual-btn"></label>
+      <label for="radio4" class="manual-btn"></label>
+    </div>
+  </div>
+</div>
